React Web App is working

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # REACT_APP_NAPSTER_API_KEY=N2ZmZDgwOWMtNTBhMy00YzU1LWE5YjctMDYxNmQ4TYyMjVl
 REACT_APP_NAPSTER_API_KEY=YzQ5ZjUwNmMtMjk2Ny00YWUwLThkOTctNTZhODFjNTI0MWYz
-REACT_APP_API_URL="http://localhost:4000/api/users
-REACT_APP_API_URL=http://localhost:4000
+# REACT_APP_API_URL=http://localhost:4000/api/users
+# REACT_APP_API_URL=http://localhost:4000/api
 REACT_APP_API_BASE=http://localhost:4000/api
 
